<resources>
    <string name="app_name">Rever-B2B</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">WELCOME</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="dashboard">Dashboard</string>
    <string name="service_request">Service\nRequest</string>
    <string name="jobs">Jobs</string>
    <string name="quotations">Quotations</string>
    <string name="reports">Reports</string>
    <string name="logout">Logout</string>
    <string name="stock_balance">Stock Balance</string>
    <string name="pending_quotation">PENDING QUOTATION</string>
    <string name="case_logs">CASE LOGS</string>
    <string name="tot_serv_req">TOTAL SERVICE REQUEST</string>
    <string name="alert">Alert</string>
    <string name="product_type">Product Type</string>
    <string name="brand">Brand</string>
    <string name="product">Product</string>
    <string name="model">Model</string>
    <string name="failures">Failures</string>
    <string name="description">Description</string>
    <string name="top5plans">Top 5 Plans</string>
    <string name="selCriteria">Select Criteria</string>
    <string name="selFactor">Select factor</string>
    <string name="selRangeType">Select range type</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="customizeReport">Customize Your Report</string>
    <string name="genReport">GENERATE REPORT</string>
    <string name="in">IN</string>
    <string name="out">OUT</string>
    <string name="all">ALL</string>
    <string name="servReqDet">SERVICE REQUEST DETAILS</string>
    <string name="prodDet">PRODUCT DETAILS</string>

    <string name="consumer">Consumer &amp; Product Details</string>
    <string name="manufacture">Manufacturer Warranty</string>
    <string name="extended">Extended Warranty</string>
    <string name="serviceDetails">Service Request Details</string>
    <string name="salutation">Salutation</string>
    <string name="selCountry">Select Country</string>
    <string name="serNo">Serial No./UPC No./EAN No.</string>
    <string name="nextStep">Next Step</string>
    <string name="emailIdNew">Email Id</string>
    <string name="productTypeNew">Product Type</string>
    <string name="brandNew">Brand</string>
    <string name="modelNew">Model</string>
    <string name="alternateEmailNew">Alternate Email</string>
    <string name="firstNameNew">First Name</string>
    <string name="middleNameNew">Middle Name</string>
    <string name="lastNameNew">Last Name</string>
    <string name="icPassportNew">IC/Passport No</string>
    <string name="addressLine1New">Address Line 1</string>
    <string name="addressLine2New">Address Line 2</string>
    <string name="postalCodeNew">Postal Code</string>
    <string name="cityNew">City</string>
    <string name="stateNew">State</string>
    <string name="countryNew">Country</string>
    <string name="mobileNew">Mobile</string>
    <string name="homePhoneNew">Home Phone</string>
    <string name="officePhoneNew">Office Phone</string>
    <string name="cancel">Cancel</string>
    <string name="newService">+New Service Request</string>
    <string name="srNumber">SR Number : </string>
    <string name="shareAcknowledge">SHARE ACKNOWLEDGEMENT</string>
    <string name="viewQuotation">VIEW QUOTATION</string>
    <string name="warrantyStatus">Warranty Status : </string>
    <string name="pastService">Past Service Returns : </string>
    <string name="serviceNumber">Service Number : </string>
    <string name="createdBy">Created By : </string>
    <string name="createdDate">Created Date : </string>
    <string name="edit">EDIT</string>
    <string name="failureDescription">Failure Description : </string>
    <string name="serviceRequestDetails">SERVICE REQUEST DETAILS</string>
    <string name="productDetails">PRODUCT DETAILS</string>
    <string name="serviceRequestInformation">Service Request Information</string>
    <string name="customerInformation">Customer Information</string>
    <string name="city">City : </string>
    <string name="state">State : </string>
    <string name="country">Country : </string>
    <string name="serialNo">Serial No : </string>
    <string name="brd">Brand : </string>
    <string name="mod">Model : </string>
    <string name="email">Email : </string>
    <string name="productType">Product Type : </string>
    <string name="search">Search</string>

    <string name="productInformation">Product Information</string>
    <string name="firstName">First Name : </string>
    <string name="lastName">Last Name : </string>
    <string name="ownerInformation">Owner Information</string>
    <string name="alternateEmail">Alternate Email : </string>
    <string name="middleName">Middle Name : </string>
    <string name="icPassport">IC/Passport No : </string>
    <string name="addressLine1">Address Line 1 : </string>
    <string name="addressLine2">Address Line 2 : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="mobile">Mobile : </string>
    <string name="homePhone">Home Phone : </string>
    <string name="officePhone">Office Phone : </string>
    <string name="billNo">Bill No : </string>
    <string name="warrantyNumber">Warranty Number : </string>
    <string name="warrantyMonths">Warranty Months : </string>
    <string name="otherDetails">Other Details</string>
    <string name="serviceCentres">Service centres : </string>
    <string name="remarks">Remarks : </string>
    <string name="productStatus">Product Status</string>
    <string name="status">Status : </string>

</resources>
