<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/loginbg"
    tools:context="com.yarraa.b2b.LoginActivity">
    <include layout="@layout/titlebar"/>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="275dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@android:color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/welcome"
            android:textSize="@dimen/textsize_normal"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@color/welcome_bg"/>

        <EditText
            android:id="@+id/edtUserInLogin"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:paddingLeft="10dp"
            android:hint="@string/username"
            android:drawablePadding="10dp"
            android:textSize="@dimen/textsize_normal"
            android:drawableLeft="@drawable/loginuser"
            android:background="@drawable/edittext_bg"/>
        <EditText
            android:id="@+id/edtPwdInLogin"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:drawableLeft="@drawable/loginpwd"
            android:background="@drawable/edittext_bg"
            android:textSize="@dimen/textsize_normal"/>
        <Button
            android:id="@+id/btnLoginInLogin"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_normal"
            android:background="@color/login"
            android:onClick="loginUser"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</RelativeLayout>
