<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:id="@+id/linearTitlesInReports"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:layout_margin="1dp"
        android:background="#DBDBDB"
        android:orientation="vertical">

    </LinearLayout>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linearDetailInReports"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/selCriteria"
                android:layout_marginLeft="15dp"
                android:textSize="@dimen/textsize_normal"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#DBDBDB"
                android:text="Select Factor"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/textsize_normal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="#DBDBDB"
                android:text="Select Range Type"
                android:paddingLeft="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/textsize_normal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:text="@string/from"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/textsize_normal"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#DBDBDB"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/textsize_normal"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:text="@string/to"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/textsize_normal"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#DBDBDB"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/textsize_normal"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/txtGenReportInReports"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:background="#387EAD"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/textsize_normal"
            android:text="@string/genReport"/>
    </RelativeLayout>

</LinearLayout>