<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearSeparatorInDashboard">

        <ImageView
            android:id="@+id/imgStockBalInDashboard"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/stock_bal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_toRightOf="@+id/imgStockBalInDashboard"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/stock_balance"
            android:textSize="@dimen/textsize_normal"/>
        <LinearLayout
            android:id="@+id/linearStockBalTitleInDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/imgStockBalInDashboard">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="0.2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="0.2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="0.2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="0.2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Stock"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="0.2"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearStockBalTitleInDashboard">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tblStockBalInDashboard">

            </TableLayout>
        </ScrollView>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearSeparatorInDashboard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:background="@android:color/darker_gray">
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="#E7E6E4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imgPendQuotInDashboard"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/pendingquotation"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/textsize_normal"
                    android:text="@string/pending_quotation"/>
                <TextView
                    android:id="@+id/txtPendQuotCountInDashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/textsize_normal"/>
            </LinearLayout>
        </HorizontalScrollView>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="#E7E6E4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imgTotServReqInDashboard"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/servreq"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/textsize_normal"
                    android:text="@string/tot_serv_req"/>
                <TextView
                    android:id="@+id/txtServReqCountInDashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/textsize_normal"/>
            </LinearLayout>
        </HorizontalScrollView>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="#E7E6E4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imgCaseLogsInDashboard"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:paddingLeft="10dp"
                    android:src="@drawable/caselog"
                    android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/textsize_normal"
                    android:text="@string/case_logs"/>
                <TextView
                    android:id="@+id/txtCaseLogsCountInDashboard"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="@dimen/textsize_normal"/>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/linearSeparatorInDashboard">
        <LinearLayout
            android:id="@+id/linearFailuresInDashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linearFailureTitleInDashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/brand"
                    android:gravity="center"
                    android:textSize="@dimen/textsize_normal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/model"
                    android:gravity="center"
                    android:textSize="@dimen/textsize_normal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Product"
                    android:gravity="center"
                    android:textSize="@dimen/textsize_normal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Failure"
                    android:gravity="center"
                    android:textSize="@dimen/textsize_normal"/>
            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tblFailuresInDashboard">

                </TableLayout>

            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearGraphInDashboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>